--- a/src/main/java/com/uasd/insurance/vistas/transacciones/frm_Reclamacion.form
+++ b/src/main/java/com/uasd/insurance/vistas/transacciones/frm_Reclamacion.form
@@ -75,7 +75,8 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
+                              <Component id="jScrollPane2" pref="0" max="32767" attributes="0"/>
+                              <Group type="102" alignment="1" attributes="0">
                                   <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
                                   <Component id="jLabel3" min="-2" pref="20" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
@@ -83,7 +84,6 @@
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="jbttBuscaEstudio" min="-2" pref="32" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="jScrollPane2" pref="0" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
@@ -101,27 +101,6 @@
                           <Component id="rbtnPagado" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
-                          <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                              <Component id="jLabel2" alignment="0" max="32767" attributes="0"/>
-                              <Component id="jlblPoliza" alignment="0" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="jtxtNoPoliza" pref="130" max="32767" attributes="0"/>
-                              <Component id="jtxtIdPrestador" max="32767" attributes="0"/>
-                          </Group>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jtxtNombreAfiliado" max="32767" attributes="0"/>
-                              <Component id="jtxtNombrePrestador" max="32767" attributes="0"/>
-                          </Group>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jbttPrestador" alignment="1" min="-2" pref="52" max="-2" attributes="0"/>
-                              <Component id="jbttAfiliado" alignment="1" min="-2" pref="52" max="-2" attributes="0"/>
-                          </Group>
-                      </Group>
-                      <Group type="102" alignment="1" attributes="0">
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jLabel1" alignment="1" min="-2" max="-2" attributes="0"/>
@@ -130,6 +109,33 @@
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="jlblTotal" min="-2" pref="107" max="-2" attributes="0"/>
                               </Group>
+                          </Group>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                              <Component id="jLabel2" alignment="0" max="32767" attributes="0"/>
+                              <Component id="jlblPoliza" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="jLabel6" alignment="1" max="32767" attributes="0"/>
+                          </Group>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="102" attributes="0">
+                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                      <Component id="jtxtNoPoliza" pref="130" max="32767" attributes="0"/>
+                                      <Component id="jtxtIdPrestador" max="32767" attributes="0"/>
+                                  </Group>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="jtxtNombreAfiliado" max="32767" attributes="0"/>
+                                      <Component id="jtxtNombrePrestador" max="32767" attributes="0"/>
+                                  </Group>
+                              </Group>
+                              <Component id="jtxtDiagnostico" max="32767" attributes="0"/>
+                          </Group>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="jbttPrestador" alignment="1" min="-2" pref="52" max="-2" attributes="0"/>
+                              <Component id="jbttAfiliado" alignment="1" min="-2" pref="52" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -170,8 +176,8 @@
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jtxtNombrePrestador" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jtxtIdPrestador" alignment="3" max="32767" attributes="0"/>
-                              <Component id="jLabel2" alignment="3" max="32767" attributes="0"/>
                               <Component id="jbttPrestador" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
+                              <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -180,7 +186,12 @@
                           <EmptySpace pref="27" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="jtxtDiagnostico" min="-2" pref="38" max="-2" attributes="0"/>
+                      <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -297,7 +308,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Palatino Linotype" size="14" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Prestador"/>
+            <Property name="text" type="java.lang.String" value="Diagnostico"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtxtIdPrestador">
@@ -453,6 +464,16 @@
               <ComponentRef name="grupoEstadoReclamacion"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Pendiente de Pago"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JTextField" name="jtxtDiagnostico">
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabel6">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Palatino Linotype" size="14" style="1"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Prestador"/>
           </Properties>
         </Component>
       </SubComponents>
